# pixel-track

./: README.md  main.py  pyproject.toml
pixel_track/: __init__.py  analysis.py  app.py  controller.py  frame_sequence.py  model.py  project_io.py  undo_commands.py
pixel_track/ui/: __init__.py  image_view.py  main_window.py  speed_plot.py
tests/: test_image_view.py  test_model.py
