[project]
name = "pixel-track"
version = "0.1.0"
description = "Desktop tool for frame-by-frame motion measurement."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "PySide6",
    "pyqtgraph",
]

[project.scripts]
pixel-track = "pixel_track.app:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
